--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -2,29 +2,25 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="71"
+    android:viewportHeight="26">
+  <group android:scaleX="0.47"
+      android:scaleY="0.17211267"
+      android:translateX="18.815"
+      android:translateY="10.762535">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M61.695,4.74V0.004H48.725L46.592,15.827L44.482,0.004H39.805L40.329,4.226C39.789,3.144 37.874,0.004 33.66,0.004C33.632,0.002 28.976,0.004 28.976,0.004L28.958,23.067L25.549,0.004L19.424,0L15.897,23.897L15.899,0.003H10.036L7.923,13.427L5.864,0.004H0V25.984H4.618V13.461L6.719,25.983H9.174L11.245,13.461V25.983H20.148L20.688,21.986H24.272L24.811,25.983L33.551,25.989H33.558V25.983H33.564H33.569V17.55L34.641,17.392L36.859,25.989H36.864H41.375H41.38L41.378,25.983H41.386H41.391L38.48,15.907C39.956,14.798 41.621,11.982 41.178,9.288V9.287C41.183,9.323 43.926,26 43.926,26L49.303,25.983L52.977,2.435V25.983H61.695V21.311H57.557V15.353H61.695V10.609H57.557V4.74H61.695ZM21.232,17.866L22.5,6.759L23.816,17.866H21.232ZM34.656,12.737C34.3,12.913 33.93,13 33.569,13V4.643C33.575,4.643 33.582,4.642 33.591,4.642C33.953,4.64 36.65,4.753 36.65,8.776C36.65,10.881 35.732,12.207 34.656,12.737ZM71,21.307V25.98H62.495V0H67.074V21.307H71Z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="35.5"
+            android:startY="0"
+            android:endX="35.5"
+            android:endY="26"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFED1D24"/>
+          <item android:offset="1" android:color="#FFED1F69"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
 </vector>
