--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <base-config cleartextTrafficPermitted="true"/>
+    <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="true">gateway.marvel.com</domain>
+        <domain includeSubdomains="true">marvel.com</domain>
+        <domain includeSubdomains="true">i.annihil.us</domain>
+    </domain-config>
 </network-security-config>
